--- a/mysite/polls/static/polls/css/primer.css
+++ b/mysite/polls/static/polls/css/primer.css
@@ -1,3 +1,10 @@
 .no-data-message {
   display: none;
 }
+
+.primer-text {
+  font-size: 24px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin: 0 8px 0 0;
+}
