--- a/mysite/polls/templates/polls/primer.html
+++ b/mysite/polls/templates/polls/primer.html
@@ -46,7 +46,7 @@ class="active"
 {#        {% endif %}#}
 
 </section>
-<section class="block__row block--center">
+<section class="block__row block--center" style="margin-top: 30px;">
     <p id="noHistoryMessage" class="no-data-message">Решенные примеры отсутствуют</p>
     <div id="answersHistory" class="block__col history__block">
 
