--- a/mysite/polls/templates/polls/primer.html
+++ b/mysite/polls/templates/polls/primer.html
@@ -24,7 +24,7 @@ class="active"
 <section class="block__col block--center">
         <div class="block__row">
             <span class="primer-text" id="exerciseText"></span>
-            <input id="answer" type="number" placeholder="Введите ответ">
+            <input id="answer" type="string" placeholder="Введите ответ">
             <button id="checkAnswer" class="btn btn-primary btn-sm">Ответить</button>
             <div class="block__row block--center" style="margin-left: 12px;">
                 <i class="fas fa-clock time-icon" title="Время решения примера"></i>
