--- a/mysite/polls/static/polls/css/primer.css
+++ b/mysite/polls/static/polls/css/primer.css
@@ -37,3 +37,24 @@
 .primer-text--bad {
   background-color: red;
 }
+
+.answers-table {
+}
+
+td, th {
+ text-align: center;
+ vertical-align: middle !important;
+ font-size: 18px;
+}
+
+.col-lg-8 {
+ overflow:hidden;
+}
+
+.container-fluid main-container {
+ overflow:hidden;
+}
+
+input {
+font-size: 22px;
+}
