reworked system: added test constructor and test instances

--- a/mysite/polls/templates/mysite/lms.html
+++ b/mysite/polls/templates/mysite/lms.html
@@ -3,8 +3,8 @@
 {% block title %}LMS{% endblock %}
 {% block name %}Тренажёр{% endblock %}
 {% block content %}
-    <p>Ваша задача - разложить одно из слагаемых на два таким образом, чтобы в сумме со вторым одно из двух полученных давало 10. В ответ записать выбранное вами слагаемое в разложенном виде.</p>
-    <p>Пример: 9+5 = 4+5+5, здесь разложили 9 на 4 и 5, соответственно в ответ будет записано "4+5".</p>
+    <p>Ваша задача: в примере <b>а+b</b> разложить первое слагаемое <b>а</b> на два слагаемых <b>с</b> и <b>d (a=c+d)</b> таким образом, чтобы <b>d+b=10</b>. В ответ записать <b>c+d</b>.</p>
+    <p>Пример: <b>9</b>+5 = <b>4+5</b>+5, здесь разложили <b>9=4+5</b>, соответственно в ответ будет записано <b>"4+5"</b>.</p>
     <p><a href="/primer" align="center"><button class="btn btn-primary btn" ><h4>Понятно.</button></a></p>
 
 {% endblock %}
