--- a/mysite/polls/templates/polls/primer.html
+++ b/mysite/polls/templates/polls/primer.html
@@ -9,7 +9,7 @@ class="active"
     <link type="text/css" rel="stylesheet" href="{% static 'polls/css/primer.css' %}">
 
     <script>
-        const API_GET_EXERCISE = "{% url 'polls:get_exercise' %}";
+        const API_GET_EXERCISE = "{% url 'polls:get_exercise_from_test' %}";
         const API_CHECK_ANSWER = "{% url 'polls:check_answer' %}";
         const API_GET_HISTORY = "{% url 'polls:get_history' %}";
 
