--- a/mysite/polls/templates/mysite/lms.html
+++ b/mysite/polls/templates/mysite/lms.html
@@ -1,10 +1,20 @@
 {% extends "mysite/base.html" %}
 
 {% block title %}LMS{% endblock %}
+{% block import %}
+{% load static %}
+
+    <script type="text/javascript" src="{% static 'polls/js/lms.js' %}"></script>
+{% endblock %}
 {% block name %}Тренажёр{% endblock %}
 {% block content %}
+{% csrf_token %}
+    <script>
+        const CRSF_token = document.getElementsByName('csrfmiddlewaretoken')[0].value;
+    </script>
     <p>Ваша задача: в примере <b>а+b</b> разложить первое слагаемое <b>а</b> на два слагаемых <b>с</b> и <b>d (a=c+d)</b> таким образом, чтобы <b>d+b=10</b>. В ответ записать <b>c+d</b>.</p>
     <p>Пример: <b>9</b>+5 = <b>4+5</b>+5, здесь разложили <b>9=4+5</b>, соответственно в ответ будет записано <b>"4+5"</b>.</p>
-    <p><a href="/primer" align="center"><button class="btn btn-primary btn" ><h4>Понятно.</button></a></p>
+    <p><button class="btn btn-primary btn" id="button-got-it"><h4>Понятно.</button></p>
+
 
 {% endblock %}
