--- a/mysite/polls/templates/polls/primer.html
+++ b/mysite/polls/templates/polls/primer.html
@@ -46,7 +46,7 @@ class="active"
 {#        {% endif %}#}
 
 </section>
-<section class="block__row block--center" style="margin-top: 30px;">
+<section class="block__row block--center card" style="margin-top: 40px;">
     <p id="noHistoryMessage" class="no-data-message">Решенные примеры отсутствуют</p>
     <table id="answersHistory" class="table table-striped">
           <thead>
