--- a/mysite/polls/static/polls/css/primer.css
+++ b/mysite/polls/static/polls/css/primer.css
@@ -58,3 +58,16 @@ td, th {
 input {
 font-size: 22px;
 }
+.card {
+    background: #fff;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: start;
+    min-height: 250px;
+    margin: 0 auto;
+    position: relative;
+    width: 80%;
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
