--- a/mysite/polls/templates/polls/primer.html
+++ b/mysite/polls/templates/polls/primer.html
@@ -24,7 +24,7 @@ class="active"
 <section class="block__col block--center">
         <div class="block__row">
             <span class="primer-text" id="exerciseText"></span>
-            <input id="answer" type="string" placeholder="Введите ответ" size="12">
+            <input id="answer" type="string" placeholder="Введите ответ" size="12"/>
             <button id="checkAnswer" class="btn btn-primary btn">Ответить</button>
             <div class="block__row block--center" style="margin-left: 12px;">
                 <i class="fas fa-clock time-icon" title="Время решения примера"></i>
@@ -38,7 +38,7 @@ class="active"
 {#        {{sl}} {{znak}} {{sll}} =#}
 {##}
 {#        {{ form }}#}
-{#        <input type="submit" value="Ответить" />#}
+{#        <input type="submit" value="Ответить" id="input-button"/>#}
 {#        {%if answer_check %}#}
 {#            <font color="green" size="4"><i class="icon-search glyphicon glyphicon-ok-circle"></i></font>#}
 {#        {% else %}#}
