--- a/mysite/polls/static/polls/css/results.css
+++ b/mysite/polls/static/polls/css/results.css
@@ -14,7 +14,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: 120px;
+    height: 140px;
     margin: 1rem;
     position: relative;
     width: 300px;
@@ -22,27 +22,25 @@
 }
 
 .card.big {
-    width: 80%;
-    min-height: 250px;
+    width: 96.5%;
+    min-height: 200px;
+    height: fit-content;
     margin: 0 auto;
+    margin-top: 20px;
 }
 
-.underline {
-    height: 3px;
-    background-color: #E6E6E6;
-    width: 100%;
-    margin: 0 auto;
-    background-image: linear-gradient(left , white 2%, #E6E6E6 50%, white 98%);
-    background-image: -o-linear-gradient(left , white 2%, #E6E6E6 50%, white 98%);
-    background-image: -moz-linear-gradient(left , white 2%, #E6E6E6 50%, white 98%);
-    background-image: -webkit-linear-gradient(left , white 2%, #E6E6E6 50%, white 98%);
-    background-image: -ms-linear-gradient(left , white 2%, #E6E6E6 50%, white 98%);
-    background-image: -webkit-gradient( linear, left bottom, right bottom, color-stop(0.02, white), color-stop(0.5, gray), color-stop(0.98, white) );
+td, th {
+ text-align: center;
+ vertical-align: middle !important;
+ font-size: 18px;
+}
+
+th {
+    height: 65px;
 }
 
 .card--title {
     font-size: 1.3rem;
-    text-transform: uppercase;
     text-underline: #5b80b2;
     text-underline-position: below;
 }
