--- a/mysite/polls/static/polls/css/primer.css
+++ b/mysite/polls/static/polls/css/primer.css
@@ -4,7 +4,7 @@
 }
 
 .primer-text {
-  font-size: 24px;
+  font-size: 32px;
   font-weight: bold;
   letter-spacing: 1px;
   margin: 0 8px 0 0;
@@ -26,7 +26,9 @@
   font-size: 18px;
   font-weight: bold;
   align-items: baseline;
+  /*
   display: flex;
+  */
   justify-content: flex-end;
   line-height: 1;
 }
@@ -41,34 +43,19 @@
 
 .answers-table {
 }
-
+/*
 td, th {
  text-align: center;
  vertical-align: middle !important;
  font-size: 18px;
 }
+*/
 
-.col-lg-8 {
- overflow:hidden;
-}
-
-.container-fluid main-container {
- overflow:hidden;
-}
 
 input {
-font-size: 22px;
+ font-size: 22px;
 }
-.card {
-    background: #fff;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: start;
-    min-height: 250px;
-    margin: 0 auto;
-    position: relative;
-    width: 80%;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+
+#noHistoryMessage {
+ margin-top: 20px;
 }
