--- a/mysite/polls/static/polls/css/results.css
+++ b/mysite/polls/static/polls/css/results.css
@@ -1,32 +1,20 @@
-.info-block {
-    display: flex;
-    flex-direction: row;
+@media screen and (max-width: 600px) {
+    .info-block {
     align-items: center;
     justify-content: space-around;
     width: 100%;
-    padding: 10px;
+    }
 }
-
-.card {
-    background: #fff;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
+@media screen and (min-width: 601px) {
+    .info-block {
     align-items: center;
-    justify-content: space-evenly;
-    height: 140px;
-    margin: 1rem;
-    position: relative;
-    width: 300px;
-    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
-}
-
-.card.big {
-    width: 96.5%;
-    min-height: 200px;
-    height: fit-content;
-    margin: 0 auto;
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    }
+    .card {
+    margin: 2%;
+    }
 }
 
 td, th {
@@ -37,6 +25,11 @@ td, th {
 
 th {
     height: 65px;
+}
+
+#button-got-it {
+    margin-top: 40px;
+    margin-bottom: 30px;
 }
 
 .card--title {
