--- a/mysite/polls/templates/mysite/results.html
+++ b/mysite/polls/templates/mysite/results.html
@@ -57,35 +57,39 @@
 </div>
 
 <div class="card big">
-    <table class="table table-striped">
-    <thead >
-        <tr>
-            <th scope="col">Пример</th>
-            <th scope="col">Данный ответ</th>
-            <th scope="col">Правильные ответы</th>
-            <th scope="col">Время решения</th>
-            <th scope="col">Проверка</th>
-        </tr>
-    </thead>
-    <tbody>
-    {% for ex in history %}
-        <tr>
-            <td>{{ex.text}}</td>
-            <td>{{ex.given_answer}}</td>
-            <td>{{ex.correct_answer}}</td>
-            <td>{{ex.time_spent|time:"H:i:s"  }}</td>
-            <td>
-                {% if ex.is_correct%}
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <th scope="col">Пример</th>
+                <th scope="col">Данный ответ</th>
+                <th scope="col">Правильные ответы</th>
+                <th scope="col">Время решения</th>
+                <th scope="col">Проверка</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for ex in history %}
+            <tr>
+                <td>{{ex.text}}</td>
+                <td>{{ex.given_answer}}</td>
+                <td>{{ex.correct_answer}}</td>
+                <td>{{ex.time_spent|time:"H:i:s" }}</td>
+                <td>
+                    {% if ex.is_correct%}
                     <font color="#00cc00" size="5"><i class="icon-search glyphicon glyphicon-ok-circle"></i></font>
-                {% else %}
-                    <font color="#ff5050" size="5"><i class="icon-search glyphicon glyphicon-remove-circle"></i></font>
-                {% endif %}
-            </td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+                    {% else %}
+                    <font color="#ff5050" size="5"><i
+                            class="icon-search glyphicon glyphicon-remove-circle"></i></font>
+                    {% endif %}
+                </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
 
+<button onclick="window.location.href = '/';" class="btn btn-primary btn" id="button-got-it"><h4>Вернуться к выбору тренажера</h4></button>
 
 {% endblock %}
