fixed test finishing when time is up

--- a/mysite/polls/templates/polls/primer.html
+++ b/mysite/polls/templates/polls/primer.html
@@ -10,6 +10,7 @@ class="active"
 
 <script>
         const API_GET_EXERCISE = "{% url 'polls:get_exercise' %}";
+        const API_GET_ALLOTTED_TIME = "{% url 'polls:get_allotted_time' %}";
         const API_CHECK_ANSWER = "{% url 'polls:check_answer' %}";
         const API_GET_HISTORY = "{% url 'polls:get_history' %}";
 
