fixed allotted time and tests time spent

--- a/mysite/polls/templates/mysite/results.html
+++ b/mysite/polls/templates/mysite/results.html
@@ -20,7 +20,7 @@
             <th>Затраченное время</th>
             </thead>
             <tbody>
-            <td>{{time_spent|time:"H:i:s"}}</td>
+            <td>{{time_spent}}</td>
             </tbody>
         </table>
     </div>
