--- a/mysite/polls/templates/mysite/base.html
+++ b/mysite/polls/templates/mysite/base.html
@@ -35,6 +35,8 @@
                 {% if user.username == "admin" %}
                 <li><a href="/admin/">Панель администратора</a></li>
                 {% endif %}
+                <li><a href="/">Тренажёры</a></li>
+                <li><a href="/stats/">Статистика</a></li>
                 <li><a href="/logout/">Выход</a></li>
             </ul>
         </div>
