--- a/mysite/polls/templates/mysite/lms.html
+++ b/mysite/polls/templates/mysite/lms.html
@@ -1,6 +1,6 @@
 {% extends "mysite/base.html" %}
 
-{% block title %}LMS{% endblock %}
+{% block title %}Тренажёр СИТШ{% endblock %}
 {% block import %}
 {% load static %}
 
