--- a/mysite/polls/templates/mysite/base.html
+++ b/mysite/polls/templates/mysite/base.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 
     <link rel="stylesheet" href='{% static "polls/css/base.css" %}'/>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     {% block import %}
@@ -36,6 +36,7 @@
                 <li><a href="/admin/">Панель администратора</a></li>
                 {% endif %}
                 <li><a href="/">Тренажёры</a></li>
+                <li><a href="/control/">Контроль</a></li>
                 <li><a href="/stats/">Статистика</a></li>
                 <li><a href="/logout/">Выход</a></li>
             </ul>
